--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
 {{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
 
-{{outlet}}
+{{#leaflet-map lat=lat lng=lng zoom=zoom}}
+{{!-- Specify child layer components here --}}
+    {{tile-layer url="http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png"}}
+{{/leaflet-map}}
