Ajouter les routes

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,3 +4,4 @@
 {{!-- Specify child layer components here --}}
     {{tile-layer url="http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png"}}
 {{/leaflet-map}}
+{{outlet}}
