--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,1 +1,13 @@
-kikou{{outlet}}
+<div class="content content_boy">
+    <h6>Formulaire de recherche </h6>
+    <form>
+        <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">Nom du lieu</span>
+            <input id="input_form" type="text" class="form-control" placeholder="Ville, pays ou région" aria-describedby="basic-addon1">
+        </div>
+
+        <button type="button" class="btn search_btn">{{fa-icon "fa-search"}}Rechercher</button>
+
+
+    </form>
+</div>{{outlet}}
