--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -1,2 +1,2 @@
 
-{{map-view geoJSON=geoJSON lat=lat lng=lng zoom=zoom universities=universities bbond=bbond}}
+{{map-view geoJSON=geoJSON lat=lat lng=lng zoom=zoom universities=universities bbond=bbond osmUniversityJSON=osmUniversityJSON}}
